[package]
name = "df-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A tool that can list the 10 biggest directories of the path you support, like df on linux."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"           # Powerful command-line argument parsing library